--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,6 +10,14 @@ $grayLightest: #eceef1;
 $grayLight: #d4d6d8;
 $red: #f04124;
 $orange: #f3840e;
+$SingleRoomRightDateColor: black;
+$SingleRoomRightBg: lightgrey;
+
+$openLeftBg: white;
+$openLeftText: black;
+
+$busyLeftBg: black;
+$busyLeftText:white;
 
 // font colors -----------------------------------------------------------------
 $primaryFont: #ffffff;
