endnow button is big now

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -321,6 +321,12 @@ body {
 	     position: absolute;
     	width: 66.667%;
     }
+    .SingleEndNow {
+	    left: 0;
+	    bottom: 0;
+	    position: absolute;
+	    width: 66.667%;
+    }
 
     .BookAfter{
 	    position: absolute;
