--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -165,15 +165,21 @@ body {
         font-size: 10vw;
         margin: 0;
         padding: 0;
-        margin-bottom: 10px;
         font-weight: lighter;
         line-height: 1;
-        height: 40%; }
+        height: 65%;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
       #single-room__wrap .full-height .left-col #single-room__room-status-open {
         text-transform: uppercase;
         font-size: 20vw;
         margin: 35px;
-        text-align: center; }
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 65%; }
       #single-room__wrap .full-height .left-col #single-room__meeting-title {
         font-size: 2.7vw;
         font-weight: lighter; }
