--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -237,39 +237,60 @@ body {
 
     .left-col {
       background: black;
-      padding: 30px;
+      padding: 30px 0 0 30px;
+      width: 651px;
+      height: 768-30px;
 	
-      #left-upper {
-      //padding: 30px;
-      }
       #single-room__room-name {
         font-size: 6vw;
+      }
+	
+      .dropdown-content1 {
+      	position: absolute;
+	top: 70px;
+	left: 200px;
+	z-index:1;
+	height: 500px;
+	width: 300px;
+	button {
+		width: 600px;
+		height: 120px;
+		line-height: 1;
+		position: static;
+		border:0;
+		border: 1px solid black;
+	}
+	.btn-header{
+		background: darkgrey;
+
+		font-size: 3vw;
+		height: 80px;
+	}
       }
 
       #single-room__room-status{
         text-transform: uppercase;
-        padding: 4% 0;
         font-size: 10vw;
 	margin:0;
 	padding:0;
         font-weight: lighter;
 	line-height: 1;
-	height: 65%;
+	//height: 65%;
+	height: 45%;
 	display: flex;
   justify-content: center;
   align-items: center;
       }
 
-
       #single-room__room-status-open{
         text-transform: uppercase;
         font-size: 20vw;
-        margin:35px;
 	text-align:center;
 	display: flex;
   justify-content: center;
   align-items: center;
   height: 65%;
+  width: 620px;
       }
 
 
@@ -277,7 +298,6 @@ body {
         font-size: 2.7vw;
         font-weight: lighter;
 
-        //#single-room__next-up {
         #single-room__meeting-subject {
           font-weight: bold;
         }
@@ -298,7 +318,7 @@ body {
 	position:absolute;
 	bottom:0;
 	left:0;
-	width: 66.6667%;
+	width: 651px;
 	background-color: darkgrey;
 	padding:0;
 	margin:0;
@@ -310,9 +330,9 @@ body {
 	font-size:0;
     }
 
-#buttonContainer{
+	#buttonContainer{
 	text-align: center;
-	width: 66.667%;
+	width: 651px;
     }
 
      .btn {
@@ -325,39 +345,38 @@ body {
 	     left: 0;
 	     bottom:0;
 	     position: absolute;
-    	width: 66.667%;
+             width: 651px;
     }
     .SingleEndNow {
 	    left: 0;
 	    bottom: 0;
 	    position: absolute;
-	    width: 66.667%;
+	    width: 651px;
     }
 
     .BookAfter{
 	    position: absolute;
 	    bottom:0;
 	    left:0;
-	width:100%;
-    	width: 22.221%;
+    	width: 217px;
+	border:0;
 	border-right: 1px solid black;
 	}
     .ExtendBooking{
             position: absolute;
             bottom:0;
-            left:22.221%;
-
-        width:100%;
-        width: 22.221%;
+            left:217px;
+        width: 217px;
+	border:0;
 	border-right: 1px solid black;
         }
-    .EndNow{
-	                position: absolute;
-            bottom:0;
-            left:44.442%;
 
-        width:100%;
-        width: 22.221%;
+    	.EndNow{
+            position: absolute;
+            bottom:0;
+            left:434px;
+            width: 217px;
+	border:0;
         }
 
 
@@ -372,11 +391,16 @@ body {
 
     .right-col {
       background: $SingleRoomRightBg;
-      padding: 30px;
       color: black;
+      width:1024-651px;// 33.333%;
+      position: absolute;
+      left: 651px;// 66.667%;
+      top: 0;
+      padding-top: 30px;
+      height: 768-30px; //768 - padding
+
 
       #single-room__clock-wrap {
-//        padding-bottom: 80px;
         font-weight: lighter;
 
         #single-room__clock {
@@ -390,19 +414,18 @@ body {
             color: $SingleRoomRightDateColor;
           }
         }
-
       }
 
       #upcoming-title {
-        font-size: 2.2vw;
+        font-size: 2.5vw;
         text-transform: uppercase;
         font-weight: lighter;
-text-align: center;
+	text-align: center;
+	margin: 10px;
       }
 
       table {
         tr {
-          border-bottom: 1px solid $grayLightest;
 
           td {
             padding: 10px 8px;
@@ -412,19 +435,16 @@ text-align: center;
 
       .up__meeting-title {
             font-size: 2vw;
-  //          text-align: center;
+	    width: 321px;
+            padding: 10px 8px 0 8px;
           }
 
       .up__meeting-time {
             font-size: 2vw;
-    //        text-align: center;
-//            color: $gray;
+	    width: 300px;
+            padding: 0 8px 10px 8px;
+          border-bottom: 1px solid $grayLightest;
           }
-
-
-      .upcoming-item {
-
-      }
     }
   }
 
