feat: :construction: started work on roombooking feature

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -159,7 +159,7 @@ body {
         font-size: 3vw; }
       #single-room__wrap .full-height .left-col #single-room__room-status {
         text-transform: uppercase;
-        padding: 4% 0;
+        padding: % 0;
         font-size: 18vw;
         font-weight: lighter; }
       #single-room__wrap .full-height .left-col #single-room__meeting-title {
@@ -224,5 +224,20 @@ body {
       vertical-align: middle; }
     .valign-middle > .columns, .valign-middle > [class*="column"] + [class*="column"]:last-child {
       float: none; } }
+
+.btn {
+  border-radius: 5px;
+  border: 1px solic black;
+  font-size: 22px;
+  padding: 5px 5px;
+  text-align: center;
+  background-color: grey;
+  display: inline-block;
+  height: 50px;
+  width: 90%;
+}
+.btn:active {
+  background-color: purple;
+}
 
 /*# sourceMappingURL=styles.css.map */
