--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -275,6 +275,7 @@ body {
 	padding:0;
         font-weight: lighter;
 	line-height: 1;
+	//without buttons:
 	//height: 65%;
 	height: 45%;
 	display: flex;
